# uno_api

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  result
app-build/: Dockerfile
docker/: Dockerfile-app  Dockerfile-app-prod  Dockerfile-nginx
migrations/2023-11-26-163726_init/: up.sql
migrations/2023-11-28-172638_init/: down.sql  up.sql
nginx/conf.d/: uno_api.conf
scripts/: build-app.sh  run-migration.sh  run_migration.sh
src/: main.rs  schema.rs
src/models/: api_error.rs  database.rs  game.rs  mod.rs  player.rs  state.rs
src/routes/: game.rs  mod.rs  player.rs  test.rs
