[package]
name = "uno_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = {version = "2.1.4", features = ["mysql", "r2d2", "chrono", "serde_json"]}
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.108"